# cfd-go

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  build.dockerfile  cfdgo.c  cfdgo.cxx  cfdgo.go  cfdgo_api.go  cfdgo_test.go  cfdgo_tests_elements_test.go  docker-compose.yml  go.mod  go_coverage.bat  go_coverage.sh  go_test.bat  go_test.sh  go_test_installed.sh  package-lock.json  package.json  swig.i  test.dockerfile
.github/workflows/: check_pre-merge_develop.yml  check_pre-merge_master.yml  check_pre-merge_sprint.yml  code_scanner.yml  create_release-and-upload.yml
apis/: factory.go  factory_test.go
apis/address/: address.go  confidential_address.go
apis/block/: block.go  block_test.go
config/: config.go  options.go
docker/: golang17-alpine14.dockerfile  tools.dockerfile
errors/: error.go  error_test.go  multi_error.go  multi_error_test.go
local_resource/: external_project_local_setting.config
src/: swig.i  swig_sandbox.i
tests/: z_logic_test.go
tools/: build_mingw.bat  build_mingw_debug.bat  cleanup_install_files.sh  cmake_cleanup.bat  cmake_cleanup.sh  convert_crlf.ps1  format.bat  format.sh  gen_swig.bat  gen_swig.sh  simple_build.sh
types/: address.go  address_type.go  block.go  block_header.go  byte_data.go  confidential_address.go  confidential_transaction.go  descriptor.go  ext_pubkey.go  extkey_type.go  hash_type.go  hdwallet.go  network_type.go  privkey.go  pubkey.go  script.go  sighash_type.go  sign_parameter.go  transaction.go
utils/: strings.go  validator.go
(+34 files in other folders)
